[gd_scene load_steps=4 format=3 uid="uid://djesfxu7h2afw"]

[ext_resource type="Script" uid="uid://b3e4cnbskfw4r" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://bgv586r20ps8e" path="res://Fonts/Xolonium-Regular.ttf" id="2_8sq4i"]
[ext_resource type="AudioStream" uid="uid://d2jur0ngr3fsb" path="res://Assets/ButtonClickSound.mp3" id="3_8sq4i"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "Dodge The Creeps"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
offset_left = 128.0
offset_top = 464.0
offset_right = 352.0
offset_bottom = 550.0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="OptionsButton" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.83300006
anchor_right = 0.5
anchor_bottom = 0.83300006
offset_left = -142.0
offset_top = -32.76007
offset_right = 146.0
offset_bottom = 53.23993
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="Level2Button" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 107.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
text = "Level 2"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SfxButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8sq4i")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
